--- a/bower.json
+++ b/bower.json
@@ -4,7 +4,7 @@
   "authors": [
     "Pascal Hartig <passy@twitter.com>"
   ],
-  "description": "A web component to display Pokemons",
+  "description": "A web component to display Pokemon",
   "main": "x-pokemon.html",
   "keywords": [
     "pokemon",
